--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+.request{
+    
+  background-color: #4696E5;
+  width:70%;
+  color:white;
+  font-weight: bold;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.request-content{
+  display:flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-between;
+  align-items: flex-end;
+  padding:50px 100px;
 }
 
-.App-link {
-  color: #61dafb;
+.request-content>input{
+  width:100%;
+  height: 50px;
+  border-radius: 10px;
+  border:none;
+  color:#4696E5;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#add-button{
+  background-color: transparent;
+  border-color: white;
+  width : 10%;
+  margin-top : 20px;
+  font-weight: bold;
+}
+.response{
+  background-color: "#FBFBFB";
+}
+.response-content{
+  background-color: #FBFBFB;
+  width:70%;
+  min-height: 300px;
+  color:grey;
+  font-weight: bold;
+  margin-bottom: 50px;
+  padding-bottom:30px;
+}
+
+.response-title{
+  background-color: #FBFBFB;
+  text-align: center;
+  padding-top : 50px;
+  width:100%;
 }
